<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/top_enter_values_layout"
        android:layout_width="328dp"
        android:layout_height="400dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="12sp"
        android:background="@drawable/custom_white_background"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/city_registration_layout"
            android:layout_width="296dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_gray_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/city_of_registaration"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_gray_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/power_car"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_gray_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/number_of_drivers"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_gray_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/age_of_the_youngest_friver"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_gray_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/min_experience_drivers"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_gray_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/count_years_no_accidents"
                android:textSize="15sp" />
        </LinearLayout>


    </LinearLayout>


